Version 0.4-1
=============
- Backward compatibility for R 2.8.0 and rJava 0.6-3.
- CTRL+C interrupts only the last R command and does not close the whole R session.
- CRAN has disabled checks on arch="ppc", so MacOS builds are (hopefully) again available from CRAN.

Version 0.4-0 (21-Mar-2011)
=============
- Added code for graph based MCPs with partial knowledge of the correlation structure from Florian Klinglmueller, who is now coauthor.
- New dependencies in this code: gtools and multcomp (and therefore also mvtnorm)
- gMCP has a new optional parameter "correlation".
- The new vignette "correlated.pdf" shows the new features.
- graphGUI Parameter grid is now 0 by default. This restores the last used grid value.
- Fractions instead of decimal numbers are shown in more places.
- Alpha values can be entered as R expression, e.g. "0.05/7".
- When the test phase is started in the GUI, you are asked, whether you have (partial) knowledge about the correlations between the tests.
- Better support for more than one GUI window in the same R session.
- All help files open correctly on windows machines - even with Java 5.0
- Please note that full epsilon support is postponed for version 0.5-0 

Version 0.3-6 (15-Mar-2011)
=============
- Mainly a bug-fix release, since the GUI was often not responding in 0.3-5.
- C compiler is needed for building gMCP since the first C source file was added.
- When saving/loading graphs, reports or png/LaTeX files, the last directory is remembered. 
- Adjusted p-values are now truncated and can not be bigger than one.

Version 0.3-5 (13-Mar-2011)
=============
- Unfortunately after release it was noted that the GUI was not responding in 0.3-5.
- New dependencies: MASS for MASS::fractions and PolynomF for polynoms in epsilon.
- Method graphGUI has a new optional argument "pvalues" for loading p-values.
- Trying to show fractions in the GUI instead of decimal numbers
- Line width of graphs can be adjusted (line width 2 is now default)