@@ -1,1 +1,0 @@
-#setRefClass(Class, fields = , contains = , methods =,  where =, ...)
