@@ -1,6 +1,6 @@
 graph2weights <- function(g) {
   w <- sapply(nodeData(g),function(x) x$alpha)
-  w <- w/sum(w)
+  #w <- w/sum(w)
 }
 
 
