@@ -1,5 +1,6 @@
 Version 0.4-1
 =============
+- We use weights instead of direct alpha allocation in the graphs.
 - Backward compatibility for R 2.8.0 and rJava 0.6-3.
 - CTRL+C interrupts only the last R command and does not close the whole R session.
 - CRAN has disabled checks on arch="ppc", so MacOS builds are (hopefully) again available from CRAN.
